Upgraded to Realm snapshot 1.10.3 Supports backlinks without compiler problems 1.11.0 snapshot was tried and did not support This implementation feels hacky, and I've add TODOs to change it back to the cleaner way when 1.10.3 comes out in a release

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ composeIcons = "1.1.0"
 kotlinx-serialization = "1.5.1"
 kotlinx-datetime = "0.4.0"
 multiplatformSettings = "1.0.0"
-realm = "1.10.0"
+realm = "1.10.3-SNAPSHOT"
 
 [libraries]
 
@@ -37,6 +37,8 @@ kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.
 multiplatformSettings = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformSettings" }
 realm-base = { module = "io.realm.kotlin:library-base", version.ref = "realm" }
 realm-sync = { module = "io.realm.kotlin:library-sync", version.ref = "realm" }
+# TODO Remove when Realm support for backlinks is stable
+realm-gradle = { module = "io.realm.kotlin:gradle-plugin", version.ref = "realm" }
 
 [plugins]
 
